springbox-eureka/kubernetes/springbox-eureka-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: springbox
    component: eureka
  name: springbox-eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springbox
      component: eureka
  template:
    metadata:
      labels:
        app: springbox
        component: eureka
    spec:
      containers:
      - image: jkwong/springbox-eureka:latest
        imagePullPolicy: Always
        name: springbox-eureka
        ports:
        - containerPort: 8761
          name: http 
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
