springbox-eureka/kubernetes/springbox-eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springbox
    component: eureka
  name: springbox-eureka
spec:
  ports:
  - name: http
    port: 8761
    protocol: TCP
    targetPort: 8761
  selector:
    app: springbox
    component: eureka
  type: ClusterIP
